--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
     compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.4.1'
 
+    testCompile 'io.rest-assured:rest-assured:3.0.1'
     testCompile 'junit:junit:4.12'
 }
