--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.2.0'
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
     compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.4.1'
+    compile 'org.apache.commons:commons-lang3:3.5'
 
     testCompile 'io.rest-assured:rest-assured:3.0.1'
     testCompile 'junit:junit:4.12'
